--- a/style.css
+++ b/style.css
@@ -4,46 +4,50 @@
 	box-sizing: border-box;
 }
 
-/* #small,
-#medium,
-#large {
-	color: black;
-	height: 20px;
-} */
-
 @media only screen and (max-width: 410px) {
 	body {
+		display: grid;
 		background-color: red;
-	}
-
-	#medium,
-	#large {
-		display: none;
 	}
 }
 
 @media only screen and (min-width: 410px) {
 	body {
+		display: grid;
+		grid-template-rows: repeat(3, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 		background-color: blue;
 	}
 
-	#small,
+	#small {
+		grid-column: 1 / 3;
+	}
+
+	#medium {
+		grid-column: 2 / 3;
+	}
+
 	#large {
-		display: none;
+		grid-column: 1 / 4;
 	}
 }
 
 @media only screen and (min-width: 768px) {
 	body {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
 		background-color: green;
 	}
 
-	#medium,
 	#small {
-		display: none;
+		grid-column: 1 / 2;
+	}
+
+	#medium {
+		grid-column: 2 / 3;
 	}
 
 	#large {
-		display: block;
+		grid-column: 3 / 3;
 	}
 }
